scrollbar style fixes and info messages updated

--- a/src/app/containers/Preferences/index.styl
+++ b/src/app/containers/Preferences/index.styl
@@ -564,7 +564,7 @@
     height: 95%;
     min-height: 387px;
     height: 387px !important;
-    overflow-y: scroll;
+    overflow-y: auto;
         &::-webkit-scrollbar {
     width: 7px;
     }
